--- a/careerex.html
+++ b/careerex.html
@@ -23,12 +23,15 @@
         <div id="content">
 	  <h1 id="career-explorations">Career Explorations</h1>
 <h2 id="programming-lab-2">Programming Lab 2</h2>
+<blockquote>
+<p><em>This document can be found at ericthewry.github.io/careerex.html</em></p>
+</blockquote>
 <p>Aaaaaand we’re back!</p>
 <p>Today your task is to explore more of the experimental side of computer science. We’ll be investigating different ways to cause routers to fail.</p>
 <h3 id="task-0-download-and-install">Task 0: Download and Install</h3>
 <p>To kick things off, you will need to install <em>Processing</em> and download the starter code.</p>
-<p>Please open Firefox or IE. Chrome will not work. Click <a href="./pdfs/Main.zip">here</a> to download both the starter code. Once the download has completed, right click on the downloaded file and click “Extract All.” When the dialog appears, click on “Browse” and select the Desktop.</p>
-<p>To download the <em>Processing</em> tool, click <a href="http://download.processing.org/processing-3.5.3-windows64.zip">here</a>. Once the download has completed, right click on the downloaded file and click “Extract All.” When the resulting progress bar finishes, open <em>Processing</em>. From the Processing window, open the <code>Lab_2.pde</code> file that resides inside the directory called <code>Main</code>.</p>
+<p>Please open Firefox. Chrome will not work. Visit this page: <a href="ericthewry.github.io/careerex.html" class="uri">ericthewry.github.io/careerex.html</a>. Click <a href="https://drive.google.com/file/d/16-D4WL9LUFjBQdMg0lXoo1QbIujYQ6jG/view?usp=sharing">here</a> to download both the starter code and the lab. Press as many download buttons as you need to start the download. Once the download has completed, right click on the downloaded file and click “Extract All.” When the dialog appears, click on “Browse” and select the Desktop.</p>
+<p>To download the <em>Processing</em> tool, click <a href="http://download.processing.org/processing-3.5.3-windows64.zip">here</a>. Once the download has completed, right click on the downloaded file and click “Extract All.” When the resulting progress bar finishes, open <em>Processing</em>. From the <em>Processing</em> tool, open the <code>Lab_2.pde</code> file that resides inside the directory called <code>Main</code>.</p>
 <p>Select the <code>Lab_2</code> tab before moving on.</p>
 <h3 id="task-1-experiment">Task 1: Experiment</h3>
 <p><em>You will not write any code to complete this task.</em></p>
