--- a/careerex.html
+++ b/careerex.html
@@ -31,7 +31,7 @@
 <h3 id="task-0-login-download-and-install">Task 0: Login, Download and Install</h3>
 <p>Your username is CIT-ph318. Your password is Password1. (Sorry Meryl!)</p>
 <p>To kick things off, you will need to install <em>Processing</em> and download the starter code.</p>
-<p>Please open Firefox. Chrome will not work. Visit this page: <a href="ericthewry.github.io/careerex.html" class="uri">ericthewry.github.io/careerex.html</a>. Click <a href="https://drive.google.com/file/d/16-D4WL9LUFjBQdMg0lXoo1QbIujYQ6jG/view?usp=sharing">here</a> to download both the <em>Processing</em> tool and the lab. Press as many download buttons as you need to start the download. Once the download has completed, right click on the downloaded file and click “Extract All.” When the dialog appears, click on “Browse” and select the Desktop.</p>
+<p>Please open Firefox. Chrome will not work. Visit this page: <a href="ericthewry.github.io/careerex.html" class="uri">ericthewry.github.io/careerex.html</a>. Click <a href="https://drive.google.com/file/d/16-D4WL9LUFjBQdMg0lXoo1QbIujYQ6jG/view?usp=sharing">here</a> to download both the <em>Processing</em> and the lab code. Press as many download buttons as you need to start the download. Once the download has completed, right click on the downloaded file and click “Extract All.” When the dialog appears, click on “Browse” and select the Desktop. When the resulting progress bar finishes, open <em>Processing</em>. From the <em>Processing</em> tool, open the <code>Lab_2.pde</code> file that resides inside the directory called <code>Main</code>.</p>
 <p>Select the <code>Lab_2</code> tab before moving on.</p>
 <h3 id="task-1-experiment">Task 1: Experiment</h3>
 <p><em>You will not write any code to complete this task.</em></p>
