Launch blog with single post

--- a/my-site/index.html
+++ b/my-site/index.html
@@ -126,6 +126,11 @@ title: Eric Hayden Campbell
 </div>
 
 <div>
+  <h2> Blog Posts </h2>
+  $partial("templates/post-list.html")$
+</div>
+
+<div>
   <h2>Teaching</h2>
   $partial("templates/teaching-list.html")$
 </div>
