--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     </head>
     <body>
         <div id="header">
-            <!-- <div id="logo"> -->
-            <!--     <a href="/">Eric Campbell</a> -->
-            <!-- </div> -->
-            <!-- <div id="navigation"> -->
-            <!--     <a href="/">Home</a> -->
-            <!--     <a href="/about.html">About</a> -->
-            <!--     <a href="/contact.html">Contact</a> -->
-            <!--     <a href="/archive.html">Archive</a> -->
-            <!-- </div> -->
+            <div id="logo">
+                <a href="./">Eric Campbell</a>
+            </div>
+            <div id="navigation">
+                <a href="./">Home</a>
+                <a href="./news.html">News</a>
+                <!-- <a href="/papers.html">Publications</a>x -->
+                <a href="./posts.html">Blog</a>
+            </div>
         </div>
 
         <div id="content">
@@ -293,6 +293,23 @@
 	</td>
     </tr>
     
+</table>
+
+</div>
+
+<div>
+  <h2> Blog Posts </h2>
+  <table>
+  
+  <tr>
+    <td>June 22, 2019</td>
+    <td><a href="./posts/2019-22-06-theory-and-practice.html">Theoretically Feasible, Practically Exceptional:<br />
+	Reflections on the NPI Workshop on the Foundations of Routing
+      
+      </a>
+    </td>
+  </tr>
+  
 </table>
 
 </div>
