--- a/posts.html
+++ b/posts.html
@@ -4,27 +4,36 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Eric Campbell - 2017-08-22-cornellstart </title>
-        <link rel="stylesheet" href="../css/default.css" />
+	<title>Eric Campbell - posts </title>
+        <link rel="stylesheet" href="./css/default.css" />
     </head>
     <body>
         <div id="header">
             <div id="logo">
-                <a href="../">Eric Campbell</a>
+                <a href="./">Eric Campbell</a>
             </div>
             <div id="navigation">
-                <a href="../">Home</a>
-                <a href="../news.html">News</a>
+                <a href="./">Home</a>
+                <a href="./news.html">News</a>
                 <!-- <a href="/papers.html">Publications</a>x -->
-                <a href="../posts.html">Blog</a>
+                <a href="./posts.html">Blog</a>
             </div>
         </div>
 
         <div id="content">
-	  <div class="info">
-  <h3>August 22, 2017</h3>
-  Successful first day of my PhD at Cornell University!
-</div>
+	  <h1> Blog Posts </h1>
+<table>
+  
+  <tr>
+    <td>June 22, 2019</td>
+    <td><a href="./posts/2019-22-06-theory-and-practice.html">Theoretically Feasible, Practically Exceptional:<br />
+	Reflections on the NPI Workshop on the Foundations of Routing
+      
+      </a>
+    </td>
+  </tr>
+  
+</table>
 
         </div>
 
