--- a/papers/2016-06-15-imies.html
+++ b/papers/2016-06-15-imies.html
@@ -4,13 +4,13 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Eric Campbell - Constructing Integer Matrices with Integer Eigenvalues </title>
+	<title>Eric Hayden Campbell - Constructing Integer Matrices with Integer Eigenvalues </title>
         <link rel="stylesheet" href="../css/default.css" />
     </head>
     <body>
         <div id="header">
             <div id="logo">
-                <a href="../">Eric Campbell</a>
+                <a href="../">Eric Hayden Campbell</a>
             </div>
             <div id="navigation">
                 <a href="../">Home</a>
