--- a/my-site/index.html
+++ b/my-site/index.html
@@ -3,7 +3,7 @@ title: Eric Hayden Campbell
 ---
 
 <div id="profile" >
-  <img class=".float-left" src="/images/profile.jpg" style="margin: 10px; width:200px;" />
+  <img class=".float-left" src="/images/ehc86_2018.jpg" style="margin: 10px; width:200px;" />
   <div id="info">
     <h1> Eric Hayden Campbell </h1>
     <h2> PhD Student, Cornell University </h2>
@@ -11,11 +11,11 @@ title: Eric Hayden Campbell
     <div id="contact">
       <p>email: ehc86 [at] institution [dot] edu</p>
       <p>office: Gates 430 </p>
-      <table>
+      <table class="links">
 	<tr style="background: white">
 	  <td><a href="https://github.com/ericthewry">
 	    <img src="/images/github.png" width="15" height="15"/>
-	    Github//ericthewry</a> <sup style="font-size: 9px"> <a href="/whywry.html" title="Why is my handle ericthewry?">[?]</a></sup>
+	    Github</a> </sup>
 	  </td>
 	  <td><a href="/pdfs/cv.pdf"> Vita</a></td>
 	</tr>
