--- a/my-site/index.html
+++ b/my-site/index.html
@@ -8,6 +8,7 @@ title: Eric Hayden Campbell
     <h1> Eric Hayden Campbell </h1>
     <h2> PhD Student, Cornell University </h2>
     <h2> Department of Computer Science </h2>
+    <h2> 2019 NSF Graduate Research Fellow </h2>
     <div id="contact">
       <p>email: ehc86 [at] institution [dot] edu</p>
       <p>office: Gates 430 </p>
@@ -40,16 +41,16 @@ title: Eric Hayden Campbell
 <div id="blurb">
   <h2> About Me </h2>
   <p>
-    I am a second-year PhD student
-    at <a href="https://www.cs.cornell.edu/">Cornell University </a>
-    interested in solving theoretical problems of industrial
-    significance -- specifically at the intersection of Networking and
-    Formal Methods/Programming Languages. My research interests
-    include domain-specific language design, type systems, formal
-    semantics, algebra, graph theory, and formal verification. I also
-    enjoy linguistics, making espresso, and ballroom dance
-    [<a href="https://www.pomona.edu/administration/campus-center/services-programs/claremont-colleges-ballroom-dance-company">1</a>]
-    [<a href="http://latindance.arts.cornell.edu/">2</a>].
+    I am a third-year PhD student and 2019 NSF Graduate Research
+    Fellow at <a href="https://www.cs.cornell.edu/">Cornell
+    University </a> interested in solving theoretical problems of
+    industrial significance -- specifically at the intersection of
+    Networking and Formal Methods/Programming Languages. My research
+    interests include domain-specific language design, type systems,
+    formal semantics, algebra, graph theory, and formal
+    verification. I dabble in linguistics,
+    and <a href="http://latindance.arts.cornell.edu/">teach salsa
+    dancing</a>
   </p>
 
   <p>
@@ -58,8 +59,7 @@ title: Eric Hayden Campbell
     Foster</a>. We're currently working on formalisms for networks
     with programmable and non-programmable hardware,
     protocol-independent extensions to NetKAT, and type systems for
-    P4. Starting in August 2019, my research will be funded by the NSF
-    GRFP.
+    P4. 
   </p>
 
 
