--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <h1> Eric Hayden Campbell </h1>
     <h2> PhD Student, Cornell University </h2>
     <h2> Department of Computer Science </h2>
+    <h2> 2019 NSF Graduate Research Fellow </h2>
     <div id="contact">
       <p>email: ehc86 [at] institution [dot] edu</p>
       <p>office: Gates 430 </p>
@@ -59,16 +60,16 @@
 <div id="blurb">
   <h2> About Me </h2>
   <p>
-    I am a second-year PhD student
-    at <a href="https://www.cs.cornell.edu/">Cornell University </a>
-    interested in solving theoretical problems of industrial
-    significance -- specifically at the intersection of Networking and
-    Formal Methods/Programming Languages. My research interests
-    include domain-specific language design, type systems, formal
-    semantics, algebra, graph theory, and formal verification. I also
-    enjoy linguistics, making espresso, and ballroom dance
-    [<a href="https://www.pomona.edu/administration/campus-center/services-programs/claremont-colleges-ballroom-dance-company">1</a>]
-    [<a href="http://latindance.arts.cornell.edu/">2</a>].
+    I am a third-year PhD student and 2019 NSF Graduate Research
+    Fellow at <a href="https://www.cs.cornell.edu/">Cornell
+    University </a> interested in solving theoretical problems of
+    industrial significance -- specifically at the intersection of
+    Networking and Formal Methods/Programming Languages. My research
+    interests include domain-specific language design, type systems,
+    formal semantics, algebra, graph theory, and formal
+    verification. I dabble in linguistics,
+    and <a href="http://latindance.arts.cornell.edu/">teach salsa
+    dancing</a>
   </p>
 
   <p>
@@ -77,8 +78,7 @@
     Foster</a>. We're currently working on formalisms for networks
     with programmable and non-programmable hardware,
     protocol-independent extensions to NetKAT, and type systems for
-    P4. Starting in August 2019, my research will be funded by the NSF
-    GRFP.
+    P4. 
   </p>
 
 
@@ -305,6 +305,15 @@
     <td>June 22, 2019</td>
     <td><a href="./posts/2019-22-06-theory-and-practice.html">Theoretically Feasible, Practically Exceptional:<br />
 	Reflections on the NPI Workshop on the Foundations of Routing
+      
+      </a>
+    </td>
+  </tr>
+  
+  <tr>
+    <td>June 22, 2019</td>
+    <td><a href="./posts/2019-07-07-4H-workshop.html">Teaching Networking Experientally:<br />
+	How to teach 40 high school students to program networks in 3 days
       
       </a>
     </td>
