--- a/posts.html
+++ b/posts.html
@@ -33,6 +33,15 @@
     </td>
   </tr>
   
+  <tr>
+    <td>June 22, 2019</td>
+    <td><a href="./posts/2019-07-07-4H-workshop.html">Teaching Networking Experientally:<br />
+	How to teach 40 high school students to program networks in 3 days
+      
+      </a>
+    </td>
+  </tr>
+  
 </table>
 
         </div>
