--- a/my-site/index.html
+++ b/my-site/index.html
@@ -8,10 +8,10 @@ title: Eric Hayden Campbell
     <h1> Eric Hayden Campbell </h1>
     <h2> PhD Student, Cornell University </h2>
     <h2> Department of Computer Science </h2>
-    <h2> 2019 NSF Graduate Research Fellow </h2>
+    <h2> 2019 NSF Graduate Fellow </h2>
     <div id="contact">
       <p>email: ehc86 [at] institution [dot] edu</p>
-      <p>office: Gates 430 </p>
+      <p>office: @ home indefinitely <strike>Gates 430</strike> </p>
       <table class="links">
 	<tr style="background: white">
 	  <td><a href="https://github.com/ericthewry">
@@ -27,11 +27,11 @@ title: Eric Hayden Campbell
 	      Linkedin
 	    </a>
 	  </td>
-	  <td>
-	    <a href="/pdfs/resume.pdf">
-	      Resume
-	    </a>
-	  </td>
+	  <!-- <td> -->
+	  <!--   <a href="/pdfs/resume.pdf"> -->
+	  <!--     Resume -->
+	  <!--   </a> -->
+	  <!-- </td> -->
 	</tr>
       </table>
     </div>
@@ -41,7 +41,7 @@ title: Eric Hayden Campbell
 <div id="blurb">
   <h2> About Me </h2>
   <p>
-    I am a third-year PhD student and 2019 NSF Graduate Research
+    I am a fourth-year PhD student and 2019 NSF Graduate Research
     Fellow at <a href="https://www.cs.cornell.edu/">Cornell
     University </a> interested in solving theoretical problems of
     industrial significance -- specifically at the intersection of
@@ -57,9 +57,8 @@ title: Eric Hayden Campbell
     I am advised by
      <a href="http://www.cs.cornell.edu/~jnfoster/">Nate
     Foster</a>. We're currently working on formalisms for networks
-    with programmable and non-programmable hardware,
-    protocol-independent extensions to NetKAT, and type systems for
-    P4. 
+    with programmable and non-programmable hardware and type systems
+    for P4.
   </p>
 
 
@@ -103,22 +102,22 @@ title: Eric Hayden Campbell
   <h2>News</h2> $partial("templates/news.html")$
 </div>
 
-<div id="research">
-  <h2>Research Projects</h2>
-  <table>
-    <tr style="background: white">
-      <td> <a href="http://frenetic-lang.org/"> Frenetic </a> </td>
-      <td> <a href="/pdfs/safep4.pdf">Types for P4</a></td>
-      <td> <a href="https://github.com/ahorn/nopticon"> Network Invariant Inference </a></td>
-    </tr>
-    <tr>
-      <td>Finite Linear Temporal Logic[<a href="/pdfs/finite.pdf">1</a>] [<a href="/pdfs/thesis.pdf">2</a>] </td>
-      <td><a href="/pdfs/kmt.pdf"> Kleene Algebra Modulo Theories
-	  (KMT)</a> </td>
+<!-- <div id="research"> -->
+<!--   <h2>Research Projects</h2> -->
+<!--   <table> -->
+<!--     <tr style="background: white"> -->
+<!--       <td> Avenir </td> -->
+<!--       <td> <a href="/pdfs/safep4.pdf">Types for P4</a></td> -->
+<!--       <td> <a href="gihEpik </td> -->
+<!--     </tr> -->
+<!--     <tr> -->
+<!--       <td>Finite Linear Temporal Logic[<a href="/pdfs/finite.pdf">1</a>] [<a href="/pdfs/thesis.pdf">2</a>] </td> -->
+<!--       <td><a href="/pdfs/kmt.pdf"> Kleene Algebra Modulo Theories -->
+<!-- 	  (KMT)</a> </td> -->
 
-    </tr>
-  </table>
-</div>
+<!--     </tr> -->
+<!--   </table> -->
+<!-- </div> -->
 
 <div id="pubs">
   <h2>Publications</h2>
