--- a/news.html
+++ b/news.html
@@ -25,6 +25,26 @@
 <table>
   
   <tr>
+    <td>December 15, 2020</td>
+    <td>I passed my thesis proposal exam!</td>
+  </tr>
+  
+  <tr>
+    <td>December 11, 2020</td>
+    <td>Avenir has been accepted to NSDI 2021!</td>
+  </tr>
+  
+  <tr>
+    <td>December  1, 2020</td>
+    <td>My linguistics work with Mats Rooth on Epistemic extensions to KAT (Epik) was accepted to SCiL 2020!</td>
+  </tr>
+  
+  <tr>
+    <td>April 28, 2020</td>
+    <td>My talk on Avenir at the P4 Expert Roundtable Series is live <a href="https://www.youtube.com/watch?v=SKlvJb3xh1c&feature=emb_logo"> (watch it here!)</a></td>
+  </tr>
+  
+  <tr>
     <td>June 25, 2019</td>
     <td>Kicked off our <a href="https://nys4-h.org/career-explorations">Career Explorations Conference</a> for High School Students on Networking and Security! [<a href="./careerex.html">Labs</a>]</td>
   </tr>
