--- a/education/2017-08-21-cornell.html
+++ b/education/2017-08-21-cornell.html
@@ -4,20 +4,20 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Eric Campbell - 2017-08-21-cornell </title>
+	<title>Eric Hayden Campbell - 2017-08-21-cornell </title>
         <link rel="stylesheet" href="../css/default.css" />
     </head>
     <body>
         <div id="header">
-            <!-- <div id="logo"> -->
-            <!--     <a href="/">Eric Campbell</a> -->
-            <!-- </div> -->
-            <!-- <div id="navigation"> -->
-            <!--     <a href="/">Home</a> -->
-            <!--     <a href="/about.html">About</a> -->
-            <!--     <a href="/contact.html">Contact</a> -->
-            <!--     <a href="/archive.html">Archive</a> -->
-            <!-- </div> -->
+            <div id="logo">
+                <a href="../">Eric Hayden Campbell</a>
+            </div>
+            <div id="navigation">
+                <a href="../">Home</a>
+                <a href="../news.html">News</a>
+                <!-- <a href="/papers.html">Publications</a>x -->
+                <a href="../posts.html">Blog</a>
+            </div>
         </div>
 
         <div id="content">
