--- a/news.html
+++ b/news.html
@@ -4,20 +4,20 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Eric Campbell - News </title>
+	<title>Eric Hayden Campbell - News </title>
         <link rel="stylesheet" href="./css/default.css" />
     </head>
     <body>
         <div id="header">
-            <!-- <div id="logo"> -->
-            <!--     <a href="/">Eric Campbell</a> -->
-            <!-- </div> -->
-            <!-- <div id="navigation"> -->
-            <!--     <a href="/">Home</a> -->
-            <!--     <a href="/about.html">About</a> -->
-            <!--     <a href="/contact.html">Contact</a> -->
-            <!--     <a href="/archive.html">Archive</a> -->
-            <!-- </div> -->
+            <div id="logo">
+                <a href="./">Eric Hayden Campbell</a>
+            </div>
+            <div id="navigation">
+                <a href="./">Home</a>
+                <a href="./news.html">News</a>
+                <!-- <a href="/papers.html">Publications</a>x -->
+                <a href="./posts.html">Blog</a>
+            </div>
         </div>
 
         <div id="content">
@@ -25,8 +25,48 @@
 <table>
   
   <tr>
+    <td>December 15, 2020</td>
+    <td>I passed my thesis proposal exam!</td>
+  </tr>
+  
+  <tr>
+    <td>December 11, 2020</td>
+    <td>Avenir has been accepted to NSDI 2021!</td>
+  </tr>
+  
+  <tr>
+    <td>December  1, 2020</td>
+    <td>My linguistics work with Mats Rooth on Epistemic extensions to KAT (Epik) was accepted to SCiL 2020!</td>
+  </tr>
+  
+  <tr>
+    <td>April 28, 2020</td>
+    <td>My talk on Avenir at the P4 Expert Roundtable Series is live <a href="https://www.youtube.com/watch?v=SKlvJb3xh1c&feature=emb_logo"> (watch it here!)</a></td>
+  </tr>
+  
+  <tr>
+    <td>June 25, 2019</td>
+    <td>Kicked off our <a href="https://nys4-h.org/career-explorations">Career Explorations Conference</a> for High School Students on Networking and Security! [<a href="./careerex.html">Labs</a>]</td>
+  </tr>
+  
+  <tr>
+    <td>June 19, 2019</td>
+    <td>Attended the <a href="http://network-programming.org/wfr/?fbclid=IwAR16Ox1e23iw3HLEBjR_AkGMDT1in3p1OQzvSPqo63EVR217Aj9st6cE_UI"> NPI Workshop on Foundations of Routing</a></td>
+  </tr>
+  
+  <tr>
+    <td>April  8, 2019</td>
+    <td>Received and accepted the NSF GRFP!</td>
+  </tr>
+  
+  <tr>
     <td>March 26, 2019</td>
     <td>Great Works seminar talk [<a href="https://github.com/ericthewry/interpreters">demo</a>]</td>
+  </tr>
+  
+  <tr>
+    <td>October  3, 2018</td>
+    <td>Attended the 2018 <a href="http://network-programming.org">NPI</a> annual retreat</td>
   </tr>
   
   <tr>
