--- a/index.html
+++ b/index.html
@@ -193,6 +193,8 @@
       </td>
       <td>
 	
+	<a href="pdfs/avenir.pdf"> pdf </a>
+	
 	
       </td>
       <td>
@@ -212,6 +214,8 @@
 	
       </td>
       <td>
+	
+	<a href="./pdfs/epistemic_kat.pdf"> pdf </a>
 	
 	
       </td>
