--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
   <h2>News</h2> <table>
   
   <tr>
+    <td>May  3, 2021</td>
+    <td>I gave a talk on control plane synthesis at the Simons Institute! (<a href="http://network-programming.org/wfr/?fbclid=IwAR16Ox1e23iw3HLEBjR_AkGMDT1in3p1OQzvSPqo63EVR217Aj9st6cE_UI">link here</a>)</td>
+  </tr>
+  
+  <tr>
     <td>December 15, 2020</td>
     <td>I passed my thesis proposal exam!</td>
   </tr>
@@ -148,11 +153,6 @@
   <tr>
     <td>June 19, 2019</td>
     <td>Attended the <a href="http://network-programming.org/wfr/?fbclid=IwAR16Ox1e23iw3HLEBjR_AkGMDT1in3p1OQzvSPqo63EVR217Aj9st6cE_UI"> NPI Workshop on Foundations of Routing</a></td>
-  </tr>
-  
-  <tr>
-    <td>April  8, 2019</td>
-    <td>Received and accepted the NSF GRFP!</td>
   </tr>
   
 </table>
@@ -198,6 +198,8 @@
 	
       </td>
       <td>
+	
+	<a href="https://www.usenix.org/conference/nsdi21/presentation/campbell"> slides</a>
 	
 	</td>
     </tr>
