--- a/news.html
+++ b/news.html
@@ -25,6 +25,11 @@
 <table>
   
   <tr>
+    <td>May  3, 2021</td>
+    <td>I gave a talk on control plane synthesis at the Simons Institute! (<a href="http://network-programming.org/wfr/?fbclid=IwAR16Ox1e23iw3HLEBjR_AkGMDT1in3p1OQzvSPqo63EVR217Aj9st6cE_UI">link here</a>)</td>
+  </tr>
+  
+  <tr>
     <td>December 15, 2020</td>
     <td>I passed my thesis proposal exam!</td>
   </tr>
