--- a/my-site/index.html
+++ b/my-site/index.html
@@ -89,7 +89,7 @@ title: Eric Hayden Campbell
     cannonical tableau-based decision procedure. This was used to
     prove completeness
     for <a href="http://www.cs.pomona.edu/~michael/papers/pldi2016_preprint.pdf">Temporal
-    NetKAT</a> in the generic framework
+    Netᴋᴀᴛ</a> in the generic framework
     of <a href="./pdfs/kmt.odf">Kleene Algebra Modulo
     Theories</a>. Subsequent work has investigated completeness for
     Linear Dynamic Logic and its finite variant.
