--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     cannonical tableau-based decision procedure. This was used to
     prove completeness
     for <a href="http://www.cs.pomona.edu/~michael/papers/pldi2016_preprint.pdf">Temporal
-    NetKAT</a> in the generic framework
+    Netᴋᴀᴛ</a> in the generic framework
     of <a href="./pdfs/kmt.odf">Kleene Algebra Modulo
     Theories</a>. Subsequent work has investigated completeness for
     Linear Dynamic Logic and its finite variant.
@@ -121,23 +121,28 @@
   <h2>News</h2> <table>
   
   <tr>
+    <td>July 19, 2021</td>
+    <td>I gave an invited talk on control plane synthesis at CAV's P4 Verification Workshop</td>
+  </tr>
+  
+  <tr>
     <td>May  3, 2021</td>
-    <td>I gave a talk on control plane synthesis at the Simons Institute! (<a href="http://network-programming.org/wfr/?fbclid=IwAR16Ox1e23iw3HLEBjR_AkGMDT1in3p1OQzvSPqo63EVR217Aj9st6cE_UI">link here</a>)</td>
+    <td>My invited talk on control plane synthesis at the Simons Institute is live (<a href="http://network-programming.org/wfr/?fbclid=IwAR16Ox1e23iw3HLEBjR_AkGMDT1in3p1OQzvSPqo63EVR217Aj9st6cE_UI">watch it here</a>)</td>
   </tr>
   
   <tr>
     <td>December 15, 2020</td>
-    <td>I passed my thesis proposal exam!</td>
+    <td>I passed my thesis proposal exam</td>
   </tr>
   
   <tr>
     <td>December 11, 2020</td>
-    <td>Avenir has been accepted to NSDI 2021!</td>
+    <td>Avenir has been accepted to NSDI 2021</td>
   </tr>
   
   <tr>
     <td>December  1, 2020</td>
-    <td>My linguistics work with Mats Rooth on Epistemic extensions to KAT (Epik) was accepted to SCiL 2020!</td>
+    <td>My linguistics work with Mats Rooth on Epistemic extensions to ᴋᴀᴛ (Epiᴋᴀᴛ) was accepted to SCiL 2020</td>
   </tr>
   
   <tr>
@@ -148,11 +153,6 @@
   <tr>
     <td>June 25, 2019</td>
     <td>Kicked off our <a href="https://nys4-h.org/career-explorations">Career Explorations Conference</a> for High School Students on Networking and Security! [<a href="./careerex.html">Labs</a>]</td>
-  </tr>
-  
-  <tr>
-    <td>June 19, 2019</td>
-    <td>Attended the <a href="http://network-programming.org/wfr/?fbclid=IwAR16Ox1e23iw3HLEBjR_AkGMDT1in3p1OQzvSPqo63EVR217Aj9st6cE_UI"> NPI Workshop on Foundations of Routing</a></td>
   </tr>
   
 </table>
