--- a/news.html
+++ b/news.html
@@ -25,23 +25,28 @@
 <table>
   
   <tr>
+    <td>July 19, 2021</td>
+    <td>I gave an invited talk on control plane synthesis at CAV's P4 Verification Workshop</td>
+  </tr>
+  
+  <tr>
     <td>May  3, 2021</td>
-    <td>I gave a talk on control plane synthesis at the Simons Institute! (<a href="http://network-programming.org/wfr/?fbclid=IwAR16Ox1e23iw3HLEBjR_AkGMDT1in3p1OQzvSPqo63EVR217Aj9st6cE_UI">link here</a>)</td>
+    <td>My invited talk on control plane synthesis at the Simons Institute is live (<a href="http://network-programming.org/wfr/?fbclid=IwAR16Ox1e23iw3HLEBjR_AkGMDT1in3p1OQzvSPqo63EVR217Aj9st6cE_UI">watch it here</a>)</td>
   </tr>
   
   <tr>
     <td>December 15, 2020</td>
-    <td>I passed my thesis proposal exam!</td>
+    <td>I passed my thesis proposal exam</td>
   </tr>
   
   <tr>
     <td>December 11, 2020</td>
-    <td>Avenir has been accepted to NSDI 2021!</td>
+    <td>Avenir has been accepted to NSDI 2021</td>
   </tr>
   
   <tr>
     <td>December  1, 2020</td>
-    <td>My linguistics work with Mats Rooth on Epistemic extensions to KAT (Epik) was accepted to SCiL 2020!</td>
+    <td>My linguistics work with Mats Rooth on Epistemic extensions to ᴋᴀᴛ (Epiᴋᴀᴛ) was accepted to SCiL 2020</td>
   </tr>
   
   <tr>
