--- a/my-site/index.html
+++ b/my-site/index.html
@@ -41,7 +41,7 @@ title: Eric Hayden Campbell
 <div id="blurb">
   <h2> About Me </h2>
   <p>
-    I am a fourth-year PhD student and 2019 NSF Graduate Research
+    I am a fifth-year PhD student and 2019 NSF Graduate Research
     Fellow at <a href="https://www.cs.cornell.edu/">Cornell
     University </a> interested in solving theoretical problems of
     industrial significance -- specifically at the intersection of
@@ -91,8 +91,7 @@ title: Eric Hayden Campbell
     for <a href="http://www.cs.pomona.edu/~michael/papers/pldi2016_preprint.pdf">Temporal
     Netᴋᴀᴛ</a> in the generic framework
     of <a href="./pdfs/kmt.odf">Kleene Algebra Modulo
-    Theories</a>. Subsequent work has investigated completeness for
-    Linear Dynamic Logic and its finite variant.
+    Theories</a>.
   </p>  
     
   
