--- a/news.html
+++ b/news.html
@@ -31,7 +31,7 @@
   
   <tr>
     <td>May  3, 2021</td>
-    <td>My invited talk on control plane synthesis at the Simons Institute is live (<a href="http://network-programming.org/wfr/?fbclid=IwAR16Ox1e23iw3HLEBjR_AkGMDT1in3p1OQzvSPqo63EVR217Aj9st6cE_UI">watch it here</a>)</td>
+    <td>My invited talk on control plane synthesis at the Simons Institute is live (<a href="https://simons.berkeley.edu/workshops/schedule/14784">watch it here</a>)</td>
   </tr>
   
   <tr>
