--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   
   <tr>
     <td>May  3, 2021</td>
-    <td>My invited talk on control plane synthesis at the Simons Institute is live (<a href="https://simons.berkeley.edu/workshops/schedule/14784">watch it here</a>)</td>
+    <td>My invited talk on control plane synthesis at the Simons Institute is live (<a href="https://simons.berkeley.edu/talks/tbd-323">watch it here</a>)</td>
   </tr>
   
   <tr>
