--- a/index.html
+++ b/index.html
@@ -181,6 +181,26 @@
     
     <tr>
       <td>
+        <b>Dependently-Typed Data Plane Programming</b>. Matthias Eichholtz, Eric Hayden Campbell, Matthias Krebs, Nate Foster,  Mira Mezini.
+	
+	<i>POPL</i>.
+	
+	
+	January 2022.
+	
+	
+      </td>
+      <td>
+	
+	
+      </td>
+      <td>
+	
+	</td>
+    </tr>
+    
+    <tr>
+      <td>
         <b>Avenir: Managing Data Plane Heterogeneity via Control Plane Synthesis</b>. Eric Hayden Campbell, William T. Hallahan, Priya Srikumar, Carmelo Cascone, Jed Liu, Vignesh Ramamurthy, Hossein Hojjat, Ruzica Piskac, Robert Soulé, J. Nathan Foster.
 	
 	<i>NSDI</i>.
