--- a/index.html
+++ b/index.html
@@ -348,6 +348,15 @@
   <table>
   
   <tr>
+    <td>December 29, 2021</td>
+    <td><a href="./posts/2021-12-29-myst.html">Solving Myst Puzzles with Z3:<br />
+	How I Got Nerd-Sniped Playing VR Myst over Christmas
+      
+      </a>
+    </td>
+  </tr>
+  
+  <tr>
     <td>July  7, 2019</td>
     <td><a href="./posts/2019-07-07-4H-workshop.html">Teaching Networking Experientally:<br />
 	How to teach 40 high school students to program networks in 3 days
