--- a/news.html
+++ b/news.html
@@ -35,6 +35,11 @@
   </tr>
   
   <tr>
+    <td>April 19, 2021</td>
+    <td>Cornell's CS News <a href="https://www.cs.cornell.edu/information/news/newsitem11609/cornell-cs-researchers-collaborate-infosys-avenir-and-present-usenix">interviewed me</a> about Avenir</td>
+  </tr>
+  
+  <tr>
     <td>December 15, 2020</td>
     <td>I passed my thesis proposal exam</td>
   </tr>
