--- a/index.html
+++ b/index.html
@@ -130,6 +130,11 @@
   </tr>
   
   <tr>
+    <td>April 19, 2021</td>
+    <td>Cornell's CS News <a href="https://www.cs.cornell.edu/information/news/newsitem11609/cornell-cs-researchers-collaborate-infosys-avenir-and-present-usenix">interviewed me</a> about Avenir</td>
+  </tr>
+  
+  <tr>
     <td>December 15, 2020</td>
     <td>I passed my thesis proposal exam</td>
   </tr>
@@ -147,11 +152,6 @@
   <tr>
     <td>April 28, 2020</td>
     <td>My talk on Avenir at the P4 Expert Roundtable Series is live <a href="https://www.youtube.com/watch?v=SKlvJb3xh1c&feature=emb_logo"> (watch it here!)</a></td>
-  </tr>
-  
-  <tr>
-    <td>June 25, 2019</td>
-    <td>Kicked off our <a href="https://nys4-h.org/career-explorations">Career Explorations Conference</a> for High School Students on Networking and Security! [<a href="./careerex.html">Labs</a>]</td>
   </tr>
   
 </table>
