--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     
     <tr>
       <td>
-        <b>Dependently-Typed Data Plane Programming</b>. Matthias Eichholtz, Eric Hayden Campbell, Matthias Krebs, Nate Foster,  Mira Mezini.
+        <b>Dependently-Typed Data Plane Programming</b>. Matthias Eichholz, Eric Hayden Campbell, Matthias Krebs, Nate Foster,  Mira Mezini.
 	
 	<i>POPL</i>.
 	
@@ -249,7 +249,7 @@
     
     <tr>
       <td>
-        <b>How to Avoid Making a Billion-Dollar Mistake: Type-Safe Data Plane Programming with SafeP4</b>. Matthias Eicholtz, Eric Campbell, Nate Foster, Guido Salvaneschi, Mira Mezini.
+        <b>How to Avoid Making a Billion-Dollar Mistake: Type-Safe Data Plane Programming with SafeP4</b>. Matthias Eichholz, Eric Campbell, Nate Foster, Guido Salvaneschi, Mira Mezini.
 	
 	<i>ECOOP</i>.
 	
