--- a/papers/2022-01-19-pi4.html
+++ b/papers/2022-01-19-pi4.html
@@ -23,7 +23,7 @@
         <div id="content">
 	  <div>
   <h2> Dependently-Typed Data Plane Programming </h2>
-  <h3> Matthias Eichholtz, Eric Hayden Campbell, Matthias Krebs, Nate Foster,  Mira Mezini </h3>
+  <h3> Matthias Eichholz, Eric Hayden Campbell, Matthias Krebs, Nate Foster,  Mira Mezini </h3>
 
   <!-- <p>Develop a dependent refinement type system for P4 with a liquid-style Z3 backend to prohibit undefined behavior</p> -->
   <p>
