--- a/my-site/index.html
+++ b/my-site/index.html
@@ -3,124 +3,101 @@ title: Eric Hayden Campbell
 ---
 
 <div id="profile" >
-  <img class=".float-left" src="/images/ehc86_2018.jpg" style="margin: 10px; width:200px;" />
+  <img class=".float-left" src="/images/ehc86_2018.jpg" style="margin-left: 20px; margin-top: 10px; width: 180px;" />
   <div id="info">
     <h1> Eric Hayden Campbell </h1>
-    <h2> PhD Student, Cornell University </h2>
-    <h2> Department of Computer Science </h2>
-    <h2> 2019 NSF Graduate Fellow </h2>
-    <div id="contact">
-      <p>email: ehc86 [at] institution [dot] edu</p>
-      <p>office: @ home indefinitely <strike>Gates 430</strike> </p>
-      <table class="links">
-	<tr style="background: white">
-	  <td><a href="https://github.com/ericthewry">
-	    <img src="/images/github.png" width="15" height="15"/>
-	    Github</a> </sup>
-	  </td>
-	  <td><a href="/pdfs/cv.pdf"> Vita</a></td>
-	</tr>
-	<tr>
-	  <td>
-	    <a href="https://www.linkedin.com/in/eric-campbell-ba339490/">
-	      <img src="/images/linkedin.png" width="15" height="15"/>
-	      Linkedin
-	    </a>
-	  </td>
-	  <!-- <td> -->
-	  <!--   <a href="/pdfs/resume.pdf"> -->
-	  <!--     Resume -->
-	  <!--   </a> -->
-	  <!-- </td> -->
-	</tr>
-      </table>
+    <p>
+    I am a PhD candidate at <a href="https://www.cs.cornell.edu/">Cornell
+    University</a> and solve problems with deep programmability in software
+    defined networks. I am advised by Nate Foster; and my research is supported
+    by the NSF GRFP. </p>
+
+    <p> In my free time 🤣, I dabble in algebra, linguistics, dance,
+    half-marathons, and jazz. </p>
+
+    <p> email: ehc86 [at] institution [dot] edu
+    <!-- <p> PhD Candidate</p> -->
+    <!-- <p>Cornell University </p> -->
+    <!-- <\!-- <p> <i> Department of Computer Science </i> </p> -\-> -->
+    <!-- <\!-- <p> <i> 2019 NSF Graduate Fellow </i> </p> -\-> -->
+    <!-- <div id="contact"> -->
+    <!--   <\!-- <p>office: Gates 430 </p> -\-> -->
+    <!--   <\!-- <p><a href="https://github.com/ericthewry"> -\-> -->
+	  <!--   <\!-- <img src="/images/github.png" width="15" height="15"/> -\-> -->
+	  <!--   <\!-- Github</a> &nbsp -\-> -->
+    <!--   <\!--   <a href="https://www.linkedin.com/in/eric-campbell-ba339490/"> -\-> -->
+	  <!--   <\!--   <img src="/images/linkedin.png" width="15" height="15"/> -\-> -->
+	  <!--   <\!--   Linkedin -\-> -->
+	  <!--   <\!-- </a></p> -\-> -->
+    <!--   <p>email: ehc86 [at] institution [dot] edu</p> -->
     </div>
   </div>
 </div>
 
-<div id="blurb">
-  <h2> About Me </h2>
-  <p>
-    I am a fifth-year PhD student and 2019 NSF Graduate Research
-    Fellow at <a href="https://www.cs.cornell.edu/">Cornell
-    University </a> interested in solving theoretical problems of
-    industrial significance -- specifically at the intersection of
-    Networking and Formal Methods/Programming Languages. My research
-    interests include domain-specific language design, type systems,
-    formal semantics, algebra, graph theory, and formal
-    verification. I dabble in linguistics,
-    and <a href="http://latindance.arts.cornell.edu/">teach salsa
-    dancing</a>
-  </p>
+<!-- <div id="blurb"> -->
+<!--   <h2> About Me </h2> -->
+<!--   <p> -->
+<!--     I am a fifth-year PhD student -->
+<!--     at <a href="https://www.cs.cornell.edu/">Cornell University </a> interested -->
+<!--     in solving theoretical problems of industrial significance -- specifically -->
+<!--     at the intersection of Networking and Formal Methods/Programming Languages. -->
+<!--     My research interests include verification, networking, domain-specific -->
+<!--     language design, type systems, formal semantics and algebra. I dabble in -->
+<!--     linguistics, and <a href="http://latindance.arts.cornell.edu/">teach salsa -->
+<!--     dancing</a> -->
+<!--   </p> -->
 
-  <p>
-    I am advised by
-     <a href="http://www.cs.cornell.edu/~jnfoster/">Nate
-    Foster</a>. We're currently working on formalisms for networks
-    with programmable and non-programmable hardware and type systems
-    for P4.
-  </p>
+<!--   <p> -->
+<!--     I am advised by -->
+<!--      <a href="http://www.cs.cornell.edu/~jnfoster/">Nate -->
+<!--     Foster</a>. We're currently working on formalisms for networks -->
+<!--     with programmable and non-programmable hardware and type systems -->
+<!--     for P4. -->
+<!--   </p> -->
 
 
-  <p>
-    In my free time, I work
-    with <a href="http://conf.ling.cornell.edu/mr249/">Mats Rooth</a>
-    on a programming language for reasoning about multi-party epistemic
-    constructs in natural language.
-  </p>
+<!--   <p> -->
+<!--     In my free time, I work -->
+<!--     with <a href="http://conf.ling.cornell.edu/mr249/">Mats Rooth</a> -->
+<!--     on a programming language for reasoning about multi-party epistemic -->
+<!--     constructs in natural language. -->
+<!--   </p> -->
   
-  <!-- <p> Last summer, I worked -->
-  <!-- with <a href="https://scholar.google.com/citations?user=oISf0GQAAAAJ&hl=en">Alex -->
-  <!-- Horn</a> -->
-  <!-- at <a href="http://www.fujitsu.com/us/about/businesspolicy/tech/rd/">Fujitsu -->
-  <!-- Labs of America </a> (Alex is now at Apple!). Building on his previous work on the -->
-  <!--  <a href="https://www.usenix.org/system/files/conference/nsdi17/nsdi17-horn-alex.pdf">DeltaNet</a> -->
-  <!-- project, we -->
-  <!-- developed <a href="https://github.com/ahorn/nopticon">Nopticon</a>, -->
-  <!-- which observes a GoBGP network and produces insights into its invariants. -->
-  <!-- </p> -->
+<!--   <\!-- <p> Last summer, I worked -\-> -->
+<!--   <\!-- with <a href="https://scholar.google.com/citations?user=oISf0GQAAAAJ&hl=en">Alex -\-> -->
+<!--   <\!-- Horn</a> -\-> -->
+<!--   <\!-- at <a href="http://www.fujitsu.com/us/about/businesspolicy/tech/rd/">Fujitsu -\-> -->
+<!--   <\!-- Labs of America </a> (Alex is now at Apple!). Building on his previous work on the -\-> -->
+<!--   <\!--  <a href="https://www.usenix.org/system/files/conference/nsdi17/nsdi17-horn-alex.pdf">DeltaNet</a> -\-> -->
+<!--   <\!-- project, we -\-> -->
+<!--   <\!-- developed <a href="https://github.com/ahorn/nopticon">Nopticon</a>, -\-> -->
+<!--   <\!-- which observes a GoBGP network and produces insights into its invariants. -\-> -->
+<!--   <\!-- </p> -\-> -->
 
-  <p> My undergraduate research
-    at <a href="https://www.pomona.edu/">Pomona College</a> focused on
-    Finite-Trace Logics
-    with <a href="http://www.cs.pomona.edu/~michael/">Michael
-    Greenberg</a>. My thesis developed novel sound and complete axioms
-    for Linear Temporal Logic on finite traces, as well as a
-    cannonical tableau-based decision procedure. This was used to
-    prove completeness
-    for <a href="http://www.cs.pomona.edu/~michael/papers/pldi2016_preprint.pdf">Temporal
-    Netᴋᴀᴛ</a> in the generic framework
-    of <a href="./pdfs/kmt.odf">Kleene Algebra Modulo
-    Theories</a>.
-  </p>  
+<!--   <\!-- <p> My undergraduate research -\-> -->
+<!--   <\!--   at <a href="https://www.pomona.edu/">Pomona College</a> focused on -\-> -->
+<!--   <\!--   Finite-Trace Logics -\-> -->
+<!--   <\!--   with <a href="http://www.cs.pomona.edu/~michael/">Michael -\-> -->
+<!--   <\!--   Greenberg</a>. My thesis developed novel sound and complete axioms -\-> -->
+<!--   <\!--   for Linear Temporal Logic on finite traces, as well as a -\-> -->
+<!--   <\!--   cannonical tableau-based decision procedure. This was used to -\-> -->
+<!--   <\!--   prove completeness -\-> -->
+<!--   <\!--   for <a href="http://www.cs.pomona.edu/~michael/papers/pldi2016_preprint.pdf">Temporal -\-> -->
+<!--   <\!--   Netᴋᴀᴛ</a> in the generic framework -\-> -->
+<!--   <\!--   of <a href="./pdfs/kmt.odf">Kleene Algebra Modulo -\-> -->
+<!--   <\!--   Theories</a>. -\-> -->
+<!--   <\!-- </p>   -\-> -->
     
   
-</div>
-
-<div id="News">
-  <h2>News</h2> $partial("templates/news.html")$
-</div>
-
-<!-- <div id="research"> -->
-<!--   <h2>Research Projects</h2> -->
-<!--   <table> -->
-<!--     <tr style="background: white"> -->
-<!--       <td> Avenir </td> -->
-<!--       <td> <a href="/pdfs/safep4.pdf">Types for P4</a></td> -->
-<!--       <td> <a href="gihEpik </td> -->
-<!--     </tr> -->
-<!--     <tr> -->
-<!--       <td>Finite Linear Temporal Logic[<a href="/pdfs/finite.pdf">1</a>] [<a href="/pdfs/thesis.pdf">2</a>] </td> -->
-<!--       <td><a href="/pdfs/kmt.pdf"> Kleene Algebra Modulo Theories -->
-<!-- 	  (KMT)</a> </td> -->
-
-<!--     </tr> -->
-<!--   </table> -->
 <!-- </div> -->
 
 <div id="pubs">
   <h2>Publications</h2>
   $partial("templates/paper-list.html")$
+</div>
+
+<div id="News">
+  <h2>News</h2> $partial("templates/news.html")$
 </div>
 
 <div>
