--- a/news.html
+++ b/news.html
@@ -13,16 +13,29 @@
                 <a href="./">Eric Hayden Campbell</a>
             </div>
             <div id="navigation">
-                <a href="./">Home</a>
+                <!-- <a href="/">Home</a> -->
                 <a href="./news.html">News</a>
                 <!-- <a href="/papers.html">Publications</a>x -->
                 <a href="./posts.html">Blog</a>
+                <a href="./pdfs/cv.pdf">Vita</a>
+                <a href="https://github.com/ericthewry">
+	                <img src="./images/github.png" width="15" height="15" />
+	                </a>
+                <a href="https://www.linkedin.com/in/eric-campbell-ba339490/">
+	                <img src="./images/linkedin.png" width="15" height="15" />
+                </a>
+
             </div>
         </div>
 
         <div id="content">
 	  <h1> News </h1>
 <table>
+  
+  <tr>
+    <td>March 10, 2022</td>
+    <td>I gave an invited talk on Avenir at Intel</td>
+  </tr>
   
   <tr>
     <td>July 19, 2021</td>
@@ -41,17 +54,7 @@
   
   <tr>
     <td>December 15, 2020</td>
-    <td>I passed my thesis proposal exam</td>
-  </tr>
-  
-  <tr>
-    <td>December 11, 2020</td>
-    <td>Avenir has been accepted to NSDI 2021</td>
-  </tr>
-  
-  <tr>
-    <td>December  1, 2020</td>
-    <td>My linguistics work with Mats Rooth on Epistemic extensions to ᴋᴀᴛ (Epiᴋᴀᴛ) was accepted to SCiL 2020</td>
+    <td>I passed my thesis proposal!</td>
   </tr>
   
   <tr>
