--- a/my-site/index.html
+++ b/my-site/index.html
@@ -7,89 +7,20 @@ title: Eric Hayden Campbell
   <div id="info">
     <h1> Eric Hayden Campbell </h1>
     <p>
-    I am a PhD candidate at <a href="https://www.cs.cornell.edu/">Cornell
-    University</a> and solve problems with deep programmability in software
-    defined networks. I am advised by Nate Foster; and my research is supported
-    by the NSF GRFP. </p>
+    As a PhD candidate at <a href="https://www.cs.cornell.edu/">Cornell
+    University</a>, I solve problems with deep programmability in software
+    defined networks. I am advised by Nate Foster, and supported by the NSF
+    GRFP. </p>
 
-    <p> In my free time 🤣, I dabble in algebra, linguistics, dance,
-    half-marathons, and jazz. </p>
+    <p> In my free time 🤣, I dabble in
+    algebra, <a href="/pdfs/epistemic_kat.pdf">linguistics</a>, <a href="http://latindance.arts.cornell.edu/">dance</a>,
+    and <a href="https://www.youtube.com/watch?v=Ph2zyrPXloQ">music</a>. </p>
 
     <p> email: ehc86 [at] institution [dot] edu
-    <!-- <p> PhD Candidate</p> -->
-    <!-- <p>Cornell University </p> -->
-    <!-- <\!-- <p> <i> Department of Computer Science </i> </p> -\-> -->
-    <!-- <\!-- <p> <i> 2019 NSF Graduate Fellow </i> </p> -\-> -->
-    <!-- <div id="contact"> -->
-    <!--   <\!-- <p>office: Gates 430 </p> -\-> -->
-    <!--   <\!-- <p><a href="https://github.com/ericthewry"> -\-> -->
-	  <!--   <\!-- <img src="/images/github.png" width="15" height="15"/> -\-> -->
-	  <!--   <\!-- Github</a> &nbsp -\-> -->
-    <!--   <\!--   <a href="https://www.linkedin.com/in/eric-campbell-ba339490/"> -\-> -->
-	  <!--   <\!--   <img src="/images/linkedin.png" width="15" height="15"/> -\-> -->
-	  <!--   <\!--   Linkedin -\-> -->
-	  <!--   <\!-- </a></p> -\-> -->
-    <!--   <p>email: ehc86 [at] institution [dot] edu</p> -->
     </div>
   </div>
 </div>
 
-<!-- <div id="blurb"> -->
-<!--   <h2> About Me </h2> -->
-<!--   <p> -->
-<!--     I am a fifth-year PhD student -->
-<!--     at <a href="https://www.cs.cornell.edu/">Cornell University </a> interested -->
-<!--     in solving theoretical problems of industrial significance -- specifically -->
-<!--     at the intersection of Networking and Formal Methods/Programming Languages. -->
-<!--     My research interests include verification, networking, domain-specific -->
-<!--     language design, type systems, formal semantics and algebra. I dabble in -->
-<!--     linguistics, and <a href="http://latindance.arts.cornell.edu/">teach salsa -->
-<!--     dancing</a> -->
-<!--   </p> -->
-
-<!--   <p> -->
-<!--     I am advised by -->
-<!--      <a href="http://www.cs.cornell.edu/~jnfoster/">Nate -->
-<!--     Foster</a>. We're currently working on formalisms for networks -->
-<!--     with programmable and non-programmable hardware and type systems -->
-<!--     for P4. -->
-<!--   </p> -->
-
-
-<!--   <p> -->
-<!--     In my free time, I work -->
-<!--     with <a href="http://conf.ling.cornell.edu/mr249/">Mats Rooth</a> -->
-<!--     on a programming language for reasoning about multi-party epistemic -->
-<!--     constructs in natural language. -->
-<!--   </p> -->
-  
-<!--   <\!-- <p> Last summer, I worked -\-> -->
-<!--   <\!-- with <a href="https://scholar.google.com/citations?user=oISf0GQAAAAJ&hl=en">Alex -\-> -->
-<!--   <\!-- Horn</a> -\-> -->
-<!--   <\!-- at <a href="http://www.fujitsu.com/us/about/businesspolicy/tech/rd/">Fujitsu -\-> -->
-<!--   <\!-- Labs of America </a> (Alex is now at Apple!). Building on his previous work on the -\-> -->
-<!--   <\!--  <a href="https://www.usenix.org/system/files/conference/nsdi17/nsdi17-horn-alex.pdf">DeltaNet</a> -\-> -->
-<!--   <\!-- project, we -\-> -->
-<!--   <\!-- developed <a href="https://github.com/ahorn/nopticon">Nopticon</a>, -\-> -->
-<!--   <\!-- which observes a GoBGP network and produces insights into its invariants. -\-> -->
-<!--   <\!-- </p> -\-> -->
-
-<!--   <\!-- <p> My undergraduate research -\-> -->
-<!--   <\!--   at <a href="https://www.pomona.edu/">Pomona College</a> focused on -\-> -->
-<!--   <\!--   Finite-Trace Logics -\-> -->
-<!--   <\!--   with <a href="http://www.cs.pomona.edu/~michael/">Michael -\-> -->
-<!--   <\!--   Greenberg</a>. My thesis developed novel sound and complete axioms -\-> -->
-<!--   <\!--   for Linear Temporal Logic on finite traces, as well as a -\-> -->
-<!--   <\!--   cannonical tableau-based decision procedure. This was used to -\-> -->
-<!--   <\!--   prove completeness -\-> -->
-<!--   <\!--   for <a href="http://www.cs.pomona.edu/~michael/papers/pldi2016_preprint.pdf">Temporal -\-> -->
-<!--   <\!--   Netᴋᴀᴛ</a> in the generic framework -\-> -->
-<!--   <\!--   of <a href="./pdfs/kmt.odf">Kleene Algebra Modulo -\-> -->
-<!--   <\!--   Theories</a>. -\-> -->
-<!--   <\!-- </p>   -\-> -->
-    
-  
-<!-- </div> -->
 
 <div id="pubs">
   <h2>Publications</h2>
